# ChromosomeStatistics

./: README.md  pyproject.toml  run.py
src/sexxy/: __init__.py  chrx.py  cli.py  gnomad.py  metadata.py  results.py  table.py  vcf.py
src/sexxy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cohort_filter.py  test_run_params.py  test_sexxy.py
